[tool.poetry]
name = "pengap"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
disnake = "^2.2.2"
disnake-jishaku = "^2.6.5"
Flask = "^2.0.2"
jishaku = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
